falta a put, view, delete
